A6/parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> stmt_list
Rule 2     stmt_list -> stmt SEMICOLON stmt_list
Rule 3     stmt_list -> stmt
Rule 4     stmt -> assign_stmt
Rule 5     stmt -> while_stmt
Rule 6     stmt -> if_stmt
Rule 7     expr -> expr PLUS term
Rule 8     expr -> expr MINUS term
Rule 9     expr_list -> expr COMMA expr_list
Rule 10    expr_list -> expr
Rule 11    expr -> term
Rule 12    term -> term TIMES fact
Rule 13    term -> term CONCAT fact
Rule 14    term -> fact
Rule 15    fact -> LPAREN expr RPAREN
Rule 16    fact -> NUMBER
Rule 17    fact -> IDENT
Rule 18    fact -> list
Rule 19    fact -> func_call
Rule 20    fact -> proc
Rule 21    assign_stmt -> IDENT ASSIGNOP expr
Rule 22    while_stmt -> WHILE expr DO stmt_list OD
Rule 23    if_stmt -> IF expr THEN stmt_list ELSE stmt_list FI
Rule 24    proc -> PROC LPAREN param_list RPAREN stmt_list END
Rule 25    proc -> PROC LPAREN RPAREN stmt_list END
Rule 26    param_list -> IDENT COMMA param_list
Rule 27    param_list -> IDENT
Rule 28    list -> LBRACKET sequence RBRACKET
Rule 29    list -> LBRACKET RBRACKET
Rule 30    sequence -> listelement COMMA sequence
Rule 31    sequence -> listelement
Rule 32    listelement -> list
Rule 33    listelement -> NUMBER
Rule 34    func_call -> IDENT LPAREN expr_list RPAREN

Terminals, with rules where they appear

ASSIGNOP             : 21
COMMA                : 9 26 30
CONCAT               : 13
DO                   : 22
ELSE                 : 23
END                  : 24 25
FI                   : 23
IDENT                : 17 21 26 27 34
IF                   : 23
LBRACKET             : 28 29
LPAREN               : 15 24 25 34
MINUS                : 8
NUMBER               : 16 33
OD                   : 22
PLUS                 : 7
PROC                 : 24 25
RBRACKET             : 28 29
RPAREN               : 15 24 25 34
SEMICOLON            : 2
THEN                 : 23
TIMES                : 12
WHILE                : 22
error                : 

Nonterminals, with rules where they appear

assign_stmt          : 4
expr                 : 7 8 9 10 15 21 22 23
expr_list            : 9 34
fact                 : 12 13 14
func_call            : 19
if_stmt              : 6
list                 : 18 32
listelement          : 30 31
param_list           : 24 26
proc                 : 20
program              : 0
sequence             : 28 30
stmt                 : 2 3
stmt_list            : 1 2 22 23 23 24 25
term                 : 7 8 11 12 13
while_stmt           : 5

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . stmt_list
    (2) stmt_list -> . stmt SEMICOLON stmt_list
    (3) stmt_list -> . stmt
    (4) stmt -> . assign_stmt
    (5) stmt -> . while_stmt
    (6) stmt -> . if_stmt
    (21) assign_stmt -> . IDENT ASSIGNOP expr
    (22) while_stmt -> . WHILE expr DO stmt_list OD
    (23) if_stmt -> . IF expr THEN stmt_list ELSE stmt_list FI

    IDENT           shift and go to state 2
    WHILE           shift and go to state 4
    IF              shift and go to state 9

    stmt_list                      shift and go to state 1
    if_stmt                        shift and go to state 3
    stmt                           shift and go to state 5
    assign_stmt                    shift and go to state 6
    while_stmt                     shift and go to state 7
    program                        shift and go to state 8

state 1

    (1) program -> stmt_list .

    $end            reduce using rule 1 (program -> stmt_list .)


state 2

    (21) assign_stmt -> IDENT . ASSIGNOP expr

    ASSIGNOP        shift and go to state 10


state 3

    (6) stmt -> if_stmt .

    SEMICOLON       reduce using rule 6 (stmt -> if_stmt .)
    END             reduce using rule 6 (stmt -> if_stmt .)
    ELSE            reduce using rule 6 (stmt -> if_stmt .)
    OD              reduce using rule 6 (stmt -> if_stmt .)
    FI              reduce using rule 6 (stmt -> if_stmt .)
    $end            reduce using rule 6 (stmt -> if_stmt .)


state 4

    (22) while_stmt -> WHILE . expr DO stmt_list OD
    (7) expr -> . expr PLUS term
    (8) expr -> . expr MINUS term
    (11) expr -> . term
    (12) term -> . term TIMES fact
    (13) term -> . term CONCAT fact
    (14) term -> . fact
    (15) fact -> . LPAREN expr RPAREN
    (16) fact -> . NUMBER
    (17) fact -> . IDENT
    (18) fact -> . list
    (19) fact -> . func_call
    (20) fact -> . proc
    (28) list -> . LBRACKET sequence RBRACKET
    (29) list -> . LBRACKET RBRACKET
    (34) func_call -> . IDENT LPAREN expr_list RPAREN
    (24) proc -> . PROC LPAREN param_list RPAREN stmt_list END
    (25) proc -> . PROC LPAREN RPAREN stmt_list END

    LPAREN          shift and go to state 16
    NUMBER          shift and go to state 11
    IDENT           shift and go to state 15
    LBRACKET        shift and go to state 12
    PROC            shift and go to state 20

    func_call                      shift and go to state 14
    term                           shift and go to state 17
    expr                           shift and go to state 18
    list                           shift and go to state 19
    proc                           shift and go to state 13
    fact                           shift and go to state 21

state 5

    (2) stmt_list -> stmt . SEMICOLON stmt_list
    (3) stmt_list -> stmt .

    SEMICOLON       shift and go to state 22
    $end            reduce using rule 3 (stmt_list -> stmt .)
    OD              reduce using rule 3 (stmt_list -> stmt .)
    FI              reduce using rule 3 (stmt_list -> stmt .)
    END             reduce using rule 3 (stmt_list -> stmt .)
    ELSE            reduce using rule 3 (stmt_list -> stmt .)


state 6

    (4) stmt -> assign_stmt .

    SEMICOLON       reduce using rule 4 (stmt -> assign_stmt .)
    END             reduce using rule 4 (stmt -> assign_stmt .)
    ELSE            reduce using rule 4 (stmt -> assign_stmt .)
    OD              reduce using rule 4 (stmt -> assign_stmt .)
    FI              reduce using rule 4 (stmt -> assign_stmt .)
    $end            reduce using rule 4 (stmt -> assign_stmt .)


state 7

    (5) stmt -> while_stmt .

    SEMICOLON       reduce using rule 5 (stmt -> while_stmt .)
    END             reduce using rule 5 (stmt -> while_stmt .)
    ELSE            reduce using rule 5 (stmt -> while_stmt .)
    OD              reduce using rule 5 (stmt -> while_stmt .)
    FI              reduce using rule 5 (stmt -> while_stmt .)
    $end            reduce using rule 5 (stmt -> while_stmt .)


state 8

    (0) S' -> program .



state 9

    (23) if_stmt -> IF . expr THEN stmt_list ELSE stmt_list FI
    (7) expr -> . expr PLUS term
    (8) expr -> . expr MINUS term
    (11) expr -> . term
    (12) term -> . term TIMES fact
    (13) term -> . term CONCAT fact
    (14) term -> . fact
    (15) fact -> . LPAREN expr RPAREN
    (16) fact -> . NUMBER
    (17) fact -> . IDENT
    (18) fact -> . list
    (19) fact -> . func_call
    (20) fact -> . proc
    (28) list -> . LBRACKET sequence RBRACKET
    (29) list -> . LBRACKET RBRACKET
    (34) func_call -> . IDENT LPAREN expr_list RPAREN
    (24) proc -> . PROC LPAREN param_list RPAREN stmt_list END
    (25) proc -> . PROC LPAREN RPAREN stmt_list END

    LPAREN          shift and go to state 16
    NUMBER          shift and go to state 11
    IDENT           shift and go to state 15
    LBRACKET        shift and go to state 12
    PROC            shift and go to state 20

    func_call                      shift and go to state 14
    term                           shift and go to state 17
    expr                           shift and go to state 23
    list                           shift and go to state 19
    proc                           shift and go to state 13
    fact                           shift and go to state 21

state 10

    (21) assign_stmt -> IDENT ASSIGNOP . expr
    (7) expr -> . expr PLUS term
    (8) expr -> . expr MINUS term
    (11) expr -> . term
    (12) term -> . term TIMES fact
    (13) term -> . term CONCAT fact
    (14) term -> . fact
    (15) fact -> . LPAREN expr RPAREN
    (16) fact -> . NUMBER
    (17) fact -> . IDENT
    (18) fact -> . list
    (19) fact -> . func_call
    (20) fact -> . proc
    (28) list -> . LBRACKET sequence RBRACKET
    (29) list -> . LBRACKET RBRACKET
    (34) func_call -> . IDENT LPAREN expr_list RPAREN
    (24) proc -> . PROC LPAREN param_list RPAREN stmt_list END
    (25) proc -> . PROC LPAREN RPAREN stmt_list END

    LPAREN          shift and go to state 16
    NUMBER          shift and go to state 11
    IDENT           shift and go to state 15
    LBRACKET        shift and go to state 12
    PROC            shift and go to state 20

    func_call                      shift and go to state 14
    term                           shift and go to state 17
    expr                           shift and go to state 24
    list                           shift and go to state 19
    proc                           shift and go to state 13
    fact                           shift and go to state 21

state 11

    (16) fact -> NUMBER .

    TIMES           reduce using rule 16 (fact -> NUMBER .)
    CONCAT          reduce using rule 16 (fact -> NUMBER .)
    COMMA           reduce using rule 16 (fact -> NUMBER .)
    PLUS            reduce using rule 16 (fact -> NUMBER .)
    MINUS           reduce using rule 16 (fact -> NUMBER .)
    RPAREN          reduce using rule 16 (fact -> NUMBER .)
    DO              reduce using rule 16 (fact -> NUMBER .)
    THEN            reduce using rule 16 (fact -> NUMBER .)
    SEMICOLON       reduce using rule 16 (fact -> NUMBER .)
    $end            reduce using rule 16 (fact -> NUMBER .)
    OD              reduce using rule 16 (fact -> NUMBER .)
    ELSE            reduce using rule 16 (fact -> NUMBER .)
    END             reduce using rule 16 (fact -> NUMBER .)
    FI              reduce using rule 16 (fact -> NUMBER .)


state 12

    (28) list -> LBRACKET . sequence RBRACKET
    (29) list -> LBRACKET . RBRACKET
    (30) sequence -> . listelement COMMA sequence
    (31) sequence -> . listelement
    (32) listelement -> . list
    (33) listelement -> . NUMBER
    (28) list -> . LBRACKET sequence RBRACKET
    (29) list -> . LBRACKET RBRACKET

    RBRACKET        shift and go to state 28
    NUMBER          shift and go to state 27
    LBRACKET        shift and go to state 12

    listelement                    shift and go to state 29
    list                           shift and go to state 26
    sequence                       shift and go to state 25

state 13

    (20) fact -> proc .

    TIMES           reduce using rule 20 (fact -> proc .)
    CONCAT          reduce using rule 20 (fact -> proc .)
    COMMA           reduce using rule 20 (fact -> proc .)
    PLUS            reduce using rule 20 (fact -> proc .)
    MINUS           reduce using rule 20 (fact -> proc .)
    RPAREN          reduce using rule 20 (fact -> proc .)
    DO              reduce using rule 20 (fact -> proc .)
    THEN            reduce using rule 20 (fact -> proc .)
    SEMICOLON       reduce using rule 20 (fact -> proc .)
    $end            reduce using rule 20 (fact -> proc .)
    OD              reduce using rule 20 (fact -> proc .)
    ELSE            reduce using rule 20 (fact -> proc .)
    END             reduce using rule 20 (fact -> proc .)
    FI              reduce using rule 20 (fact -> proc .)


state 14

    (19) fact -> func_call .

    TIMES           reduce using rule 19 (fact -> func_call .)
    CONCAT          reduce using rule 19 (fact -> func_call .)
    COMMA           reduce using rule 19 (fact -> func_call .)
    PLUS            reduce using rule 19 (fact -> func_call .)
    MINUS           reduce using rule 19 (fact -> func_call .)
    RPAREN          reduce using rule 19 (fact -> func_call .)
    DO              reduce using rule 19 (fact -> func_call .)
    THEN            reduce using rule 19 (fact -> func_call .)
    SEMICOLON       reduce using rule 19 (fact -> func_call .)
    $end            reduce using rule 19 (fact -> func_call .)
    OD              reduce using rule 19 (fact -> func_call .)
    ELSE            reduce using rule 19 (fact -> func_call .)
    END             reduce using rule 19 (fact -> func_call .)
    FI              reduce using rule 19 (fact -> func_call .)


state 15

    (17) fact -> IDENT .
    (34) func_call -> IDENT . LPAREN expr_list RPAREN

    TIMES           reduce using rule 17 (fact -> IDENT .)
    CONCAT          reduce using rule 17 (fact -> IDENT .)
    COMMA           reduce using rule 17 (fact -> IDENT .)
    PLUS            reduce using rule 17 (fact -> IDENT .)
    MINUS           reduce using rule 17 (fact -> IDENT .)
    RPAREN          reduce using rule 17 (fact -> IDENT .)
    DO              reduce using rule 17 (fact -> IDENT .)
    THEN            reduce using rule 17 (fact -> IDENT .)
    SEMICOLON       reduce using rule 17 (fact -> IDENT .)
    $end            reduce using rule 17 (fact -> IDENT .)
    OD              reduce using rule 17 (fact -> IDENT .)
    ELSE            reduce using rule 17 (fact -> IDENT .)
    END             reduce using rule 17 (fact -> IDENT .)
    FI              reduce using rule 17 (fact -> IDENT .)
    LPAREN          shift and go to state 30


state 16

    (15) fact -> LPAREN . expr RPAREN
    (7) expr -> . expr PLUS term
    (8) expr -> . expr MINUS term
    (11) expr -> . term
    (12) term -> . term TIMES fact
    (13) term -> . term CONCAT fact
    (14) term -> . fact
    (15) fact -> . LPAREN expr RPAREN
    (16) fact -> . NUMBER
    (17) fact -> . IDENT
    (18) fact -> . list
    (19) fact -> . func_call
    (20) fact -> . proc
    (28) list -> . LBRACKET sequence RBRACKET
    (29) list -> . LBRACKET RBRACKET
    (34) func_call -> . IDENT LPAREN expr_list RPAREN
    (24) proc -> . PROC LPAREN param_list RPAREN stmt_list END
    (25) proc -> . PROC LPAREN RPAREN stmt_list END

    LPAREN          shift and go to state 16
    NUMBER          shift and go to state 11
    IDENT           shift and go to state 15
    LBRACKET        shift and go to state 12
    PROC            shift and go to state 20

    func_call                      shift and go to state 14
    term                           shift and go to state 17
    expr                           shift and go to state 31
    list                           shift and go to state 19
    proc                           shift and go to state 13
    fact                           shift and go to state 21

state 17

    (11) expr -> term .
    (12) term -> term . TIMES fact
    (13) term -> term . CONCAT fact

    PLUS            reduce using rule 11 (expr -> term .)
    MINUS           reduce using rule 11 (expr -> term .)
    SEMICOLON       reduce using rule 11 (expr -> term .)
    $end            reduce using rule 11 (expr -> term .)
    OD              reduce using rule 11 (expr -> term .)
    ELSE            reduce using rule 11 (expr -> term .)
    END             reduce using rule 11 (expr -> term .)
    FI              reduce using rule 11 (expr -> term .)
    COMMA           reduce using rule 11 (expr -> term .)
    RPAREN          reduce using rule 11 (expr -> term .)
    THEN            reduce using rule 11 (expr -> term .)
    DO              reduce using rule 11 (expr -> term .)
    TIMES           shift and go to state 33
    CONCAT          shift and go to state 32


state 18

    (22) while_stmt -> WHILE expr . DO stmt_list OD
    (7) expr -> expr . PLUS term
    (8) expr -> expr . MINUS term

    DO              shift and go to state 34
    PLUS            shift and go to state 35
    MINUS           shift and go to state 36


state 19

    (18) fact -> list .

    TIMES           reduce using rule 18 (fact -> list .)
    CONCAT          reduce using rule 18 (fact -> list .)
    COMMA           reduce using rule 18 (fact -> list .)
    PLUS            reduce using rule 18 (fact -> list .)
    MINUS           reduce using rule 18 (fact -> list .)
    RPAREN          reduce using rule 18 (fact -> list .)
    DO              reduce using rule 18 (fact -> list .)
    THEN            reduce using rule 18 (fact -> list .)
    SEMICOLON       reduce using rule 18 (fact -> list .)
    $end            reduce using rule 18 (fact -> list .)
    OD              reduce using rule 18 (fact -> list .)
    ELSE            reduce using rule 18 (fact -> list .)
    END             reduce using rule 18 (fact -> list .)
    FI              reduce using rule 18 (fact -> list .)


state 20

    (24) proc -> PROC . LPAREN param_list RPAREN stmt_list END
    (25) proc -> PROC . LPAREN RPAREN stmt_list END

    LPAREN          shift and go to state 37


state 21

    (14) term -> fact .

    TIMES           reduce using rule 14 (term -> fact .)
    CONCAT          reduce using rule 14 (term -> fact .)
    PLUS            reduce using rule 14 (term -> fact .)
    MINUS           reduce using rule 14 (term -> fact .)
    SEMICOLON       reduce using rule 14 (term -> fact .)
    $end            reduce using rule 14 (term -> fact .)
    OD              reduce using rule 14 (term -> fact .)
    ELSE            reduce using rule 14 (term -> fact .)
    END             reduce using rule 14 (term -> fact .)
    FI              reduce using rule 14 (term -> fact .)
    COMMA           reduce using rule 14 (term -> fact .)
    RPAREN          reduce using rule 14 (term -> fact .)
    DO              reduce using rule 14 (term -> fact .)
    THEN            reduce using rule 14 (term -> fact .)


state 22

    (2) stmt_list -> stmt SEMICOLON . stmt_list
    (2) stmt_list -> . stmt SEMICOLON stmt_list
    (3) stmt_list -> . stmt
    (4) stmt -> . assign_stmt
    (5) stmt -> . while_stmt
    (6) stmt -> . if_stmt
    (21) assign_stmt -> . IDENT ASSIGNOP expr
    (22) while_stmt -> . WHILE expr DO stmt_list OD
    (23) if_stmt -> . IF expr THEN stmt_list ELSE stmt_list FI

    IDENT           shift and go to state 2
    WHILE           shift and go to state 4
    IF              shift and go to state 9

    stmt_list                      shift and go to state 38
    if_stmt                        shift and go to state 3
    stmt                           shift and go to state 5
    assign_stmt                    shift and go to state 6
    while_stmt                     shift and go to state 7

state 23

    (23) if_stmt -> IF expr . THEN stmt_list ELSE stmt_list FI
    (7) expr -> expr . PLUS term
    (8) expr -> expr . MINUS term

    THEN            shift and go to state 39
    PLUS            shift and go to state 35
    MINUS           shift and go to state 36


state 24

    (21) assign_stmt -> IDENT ASSIGNOP expr .
    (7) expr -> expr . PLUS term
    (8) expr -> expr . MINUS term

    SEMICOLON       reduce using rule 21 (assign_stmt -> IDENT ASSIGNOP expr .)
    $end            reduce using rule 21 (assign_stmt -> IDENT ASSIGNOP expr .)
    OD              reduce using rule 21 (assign_stmt -> IDENT ASSIGNOP expr .)
    END             reduce using rule 21 (assign_stmt -> IDENT ASSIGNOP expr .)
    ELSE            reduce using rule 21 (assign_stmt -> IDENT ASSIGNOP expr .)
    FI              reduce using rule 21 (assign_stmt -> IDENT ASSIGNOP expr .)
    PLUS            shift and go to state 35
    MINUS           shift and go to state 36


state 25

    (28) list -> LBRACKET sequence . RBRACKET

    RBRACKET        shift and go to state 40


state 26

    (32) listelement -> list .

    COMMA           reduce using rule 32 (listelement -> list .)
    RBRACKET        reduce using rule 32 (listelement -> list .)


state 27

    (33) listelement -> NUMBER .

    COMMA           reduce using rule 33 (listelement -> NUMBER .)
    RBRACKET        reduce using rule 33 (listelement -> NUMBER .)


state 28

    (29) list -> LBRACKET RBRACKET .

    TIMES           reduce using rule 29 (list -> LBRACKET RBRACKET .)
    CONCAT          reduce using rule 29 (list -> LBRACKET RBRACKET .)
    PLUS            reduce using rule 29 (list -> LBRACKET RBRACKET .)
    MINUS           reduce using rule 29 (list -> LBRACKET RBRACKET .)
    SEMICOLON       reduce using rule 29 (list -> LBRACKET RBRACKET .)
    $end            reduce using rule 29 (list -> LBRACKET RBRACKET .)
    OD              reduce using rule 29 (list -> LBRACKET RBRACKET .)
    ELSE            reduce using rule 29 (list -> LBRACKET RBRACKET .)
    END             reduce using rule 29 (list -> LBRACKET RBRACKET .)
    FI              reduce using rule 29 (list -> LBRACKET RBRACKET .)
    THEN            reduce using rule 29 (list -> LBRACKET RBRACKET .)
    COMMA           reduce using rule 29 (list -> LBRACKET RBRACKET .)
    RBRACKET        reduce using rule 29 (list -> LBRACKET RBRACKET .)
    RPAREN          reduce using rule 29 (list -> LBRACKET RBRACKET .)
    DO              reduce using rule 29 (list -> LBRACKET RBRACKET .)


state 29

    (30) sequence -> listelement . COMMA sequence
    (31) sequence -> listelement .

    COMMA           shift and go to state 41
    RBRACKET        reduce using rule 31 (sequence -> listelement .)


state 30

    (34) func_call -> IDENT LPAREN . expr_list RPAREN
    (9) expr_list -> . expr COMMA expr_list
    (10) expr_list -> . expr
    (7) expr -> . expr PLUS term
    (8) expr -> . expr MINUS term
    (11) expr -> . term
    (12) term -> . term TIMES fact
    (13) term -> . term CONCAT fact
    (14) term -> . fact
    (15) fact -> . LPAREN expr RPAREN
    (16) fact -> . NUMBER
    (17) fact -> . IDENT
    (18) fact -> . list
    (19) fact -> . func_call
    (20) fact -> . proc
    (28) list -> . LBRACKET sequence RBRACKET
    (29) list -> . LBRACKET RBRACKET
    (34) func_call -> . IDENT LPAREN expr_list RPAREN
    (24) proc -> . PROC LPAREN param_list RPAREN stmt_list END
    (25) proc -> . PROC LPAREN RPAREN stmt_list END

    LPAREN          shift and go to state 16
    NUMBER          shift and go to state 11
    IDENT           shift and go to state 15
    LBRACKET        shift and go to state 12
    PROC            shift and go to state 20

    func_call                      shift and go to state 14
    term                           shift and go to state 17
    expr_list                      shift and go to state 42
    list                           shift and go to state 19
    expr                           shift and go to state 43
    proc                           shift and go to state 13
    fact                           shift and go to state 21

state 31

    (15) fact -> LPAREN expr . RPAREN
    (7) expr -> expr . PLUS term
    (8) expr -> expr . MINUS term

    RPAREN          shift and go to state 44
    PLUS            shift and go to state 35
    MINUS           shift and go to state 36


state 32

    (13) term -> term CONCAT . fact
    (15) fact -> . LPAREN expr RPAREN
    (16) fact -> . NUMBER
    (17) fact -> . IDENT
    (18) fact -> . list
    (19) fact -> . func_call
    (20) fact -> . proc
    (28) list -> . LBRACKET sequence RBRACKET
    (29) list -> . LBRACKET RBRACKET
    (34) func_call -> . IDENT LPAREN expr_list RPAREN
    (24) proc -> . PROC LPAREN param_list RPAREN stmt_list END
    (25) proc -> . PROC LPAREN RPAREN stmt_list END

    LPAREN          shift and go to state 16
    NUMBER          shift and go to state 11
    IDENT           shift and go to state 15
    LBRACKET        shift and go to state 12
    PROC            shift and go to state 20

    func_call                      shift and go to state 14
    list                           shift and go to state 19
    proc                           shift and go to state 13
    fact                           shift and go to state 45

state 33

    (12) term -> term TIMES . fact
    (15) fact -> . LPAREN expr RPAREN
    (16) fact -> . NUMBER
    (17) fact -> . IDENT
    (18) fact -> . list
    (19) fact -> . func_call
    (20) fact -> . proc
    (28) list -> . LBRACKET sequence RBRACKET
    (29) list -> . LBRACKET RBRACKET
    (34) func_call -> . IDENT LPAREN expr_list RPAREN
    (24) proc -> . PROC LPAREN param_list RPAREN stmt_list END
    (25) proc -> . PROC LPAREN RPAREN stmt_list END

    LPAREN          shift and go to state 16
    NUMBER          shift and go to state 11
    IDENT           shift and go to state 15
    LBRACKET        shift and go to state 12
    PROC            shift and go to state 20

    func_call                      shift and go to state 14
    list                           shift and go to state 19
    proc                           shift and go to state 13
    fact                           shift and go to state 46

state 34

    (22) while_stmt -> WHILE expr DO . stmt_list OD
    (2) stmt_list -> . stmt SEMICOLON stmt_list
    (3) stmt_list -> . stmt
    (4) stmt -> . assign_stmt
    (5) stmt -> . while_stmt
    (6) stmt -> . if_stmt
    (21) assign_stmt -> . IDENT ASSIGNOP expr
    (22) while_stmt -> . WHILE expr DO stmt_list OD
    (23) if_stmt -> . IF expr THEN stmt_list ELSE stmt_list FI

    IDENT           shift and go to state 2
    WHILE           shift and go to state 4
    IF              shift and go to state 9

    stmt_list                      shift and go to state 47
    if_stmt                        shift and go to state 3
    stmt                           shift and go to state 5
    assign_stmt                    shift and go to state 6
    while_stmt                     shift and go to state 7

state 35

    (7) expr -> expr PLUS . term
    (12) term -> . term TIMES fact
    (13) term -> . term CONCAT fact
    (14) term -> . fact
    (15) fact -> . LPAREN expr RPAREN
    (16) fact -> . NUMBER
    (17) fact -> . IDENT
    (18) fact -> . list
    (19) fact -> . func_call
    (20) fact -> . proc
    (28) list -> . LBRACKET sequence RBRACKET
    (29) list -> . LBRACKET RBRACKET
    (34) func_call -> . IDENT LPAREN expr_list RPAREN
    (24) proc -> . PROC LPAREN param_list RPAREN stmt_list END
    (25) proc -> . PROC LPAREN RPAREN stmt_list END

    LPAREN          shift and go to state 16
    NUMBER          shift and go to state 11
    IDENT           shift and go to state 15
    LBRACKET        shift and go to state 12
    PROC            shift and go to state 20

    func_call                      shift and go to state 14
    term                           shift and go to state 48
    list                           shift and go to state 19
    proc                           shift and go to state 13
    fact                           shift and go to state 21

state 36
